--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -2,6 +2,7 @@
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     tex2jax: {
+      displayMath: [ ['$$','$$'], ['\[','\]'] ], 
       inlineMath: [ ['$','$'], ["\\(","\\)"] ],
       processEscapes: true
     }
