--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,17 @@ layout: default
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span></span>
       {%- endif -%}</p>
       {% include mathjax.html %}
+
+
+{% comment %}
+=======================
+The purpose of this snippet is to list all the tags you have in your site.
+=======================
+{% endcomment %}
+{% for tag in tags %}
+	<a href="#{{ tag | slugify }}"> {{ tag }} </a>
+{% endfor %}
+
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
