--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,5 +1,6 @@
 <script>
-    renderMathInElement(document.body,{delimiters: [
+    renderMathInElement(document,{delimiters: [
     					{left: "$$", right: "$$", display: true},
 					  {left: "$", right: "$", display: false}
 ]});
+</script>
