--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,6 +1,6 @@
 <script>
       renderMathInElement(
-          document.body,
+          document.article,
           {
               delimiters: [
                   {left: "$$", right: "$$", display: true},
