--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@ MathJax.Hub.Config({
   {% if site.sidebar and site.show_description %}
     <div class="hidden description">{{ site.description }}</div>
   {% endif %}
-  <meta property="twitter:card" content="summary_large_image"/>
+  <meta property="twitter:card" content="text:title"/>
 </header>
 
 {{ content }}
