--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,9 @@ MathJax.Hub.Config({
   {% if site.sidebar and site.show_description %}
     <div class="hidden description">{{ site.description }}</div>
   {% endif %}
-  <meta property="twitter:card" content="text:title"/>
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@hanuljeon95" />
+  <meta name="twitter:creator" content="@hanuljeon95" />
 </header>
 
 {{ content }}
