Page name changed. Add comments.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@ MathJax.Hub.Config({
 <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
 {% else %}
 <meta name="twitter:card"  content="summary">
-<meta name="twitter:image" content="https://hanuljeon95.github.io/files/title.jpg">
+<meta name="twitter:image" content="../files/title.jpg">
 {% endif %}
 
 </header>
