Page name changed. Add comments.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,11 @@ layout: default
 <article>
   {% include meta.html post=page %}
   {{ content }}
-  {% if page.comments != false and site.comments.isso or site.comments.disqus %}
+<!--   {% if page.comments != false and site.comments.isso or site.comments.disqus %} -->
+  {% if page.comments %}
     <hr>
-    {% if site.comments.isso_domain %}<div id="isso-thread"></div>{% endif %}
-    {% if site.comments.disqus_shortname %}
+    <!-- {% if site.comments.isso_domain %}<div id="isso-thread"></div>{% endif %} -->
+    <!-- {% if site.comments.disqus_shortname %} -->
     <div id="disqus_thread"></div>
     <script>
         (function() { 
@@ -18,7 +19,7 @@ layout: default
         (d.head || d.body).appendChild(s);
     })();
     </script>
-    {% endif %}
+    <!-- {% endif %} -->
     <noscript>Please enable JavaScript to view comments.</noscript>
   {% endif %}
 </article>
