--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,7 @@ MathJax.Hub.Config({
 
 {% if page.image %}
 <meta property="og:image" content="{{ site.url }}{{ page.image }}">
+<meta property="og:image" content="../files/IMG_6366.JPG" />
 <meta name="twitter:card"  content="summary_large_image">
 <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
 {% else %}
