--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,15 +18,30 @@
 {% if site.comments.disqus_shortname and page.layout == "post" %}<script src="//{{ site.comments.disqus_shortname }}.disqus.com/embed.js" async></script>{% endif %}
 {% if site.comments.isso_domain and page.layout == "post" %}<script data-isso="http://{{ site.comments.isso_domain }}" src="//{{ site.comments.isso_domain }}/js/embed.min.js"></script>{% endif %}
 
-<script type="text/javascript" id="MathJax-script" async
-  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-</script>
+<!-- inline config -->
 <script>
   MathJax = {
     tex: {
-      inlineMath: [['$', '$']]
-    }
+      inlineMath: [['$', '$'], ['\\(', '\\)']],
+      macros: {
+	lag: "\\langle",
+	rag: "\\rangle",
+	dom: "\\operatorname{dom}",
+	ran: "\\operatorname{ran}",
+	lr: "\\leftrightarrow",
+	lrlrarrows: "\\mathrel{\\leftleftarrows\\!\\!\\!\\!\\!\\rightrightarrows}"
+	bb: ["\\mathbb #1", 1],
+    	}
+    },
+    svg: {
+    fontCache: 'global'
+  	},
   };
+</script>
+
+<!-- load MathJax -->
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 </script>
 
 
